--- a/index.html
+++ b/index.html
@@ -50,24 +50,24 @@
 </head>
 
 <body class="min-h-screen bg-cover bg-center flex items-center justify-center"
-    style="background-image: url('https://via.placeholder.com/1920x1080');">
+    style="background-image: url('./public/image/background.png');">
     <div class="flex space-x-72">
         <!-- Admin Page -->
         <a href="/admin/view/index.html" class="group text-center">
             <div
                 class="w-64 h-64 rounded-full bg-white shadow-lg flex items-center justify-center transition-transform transform group-hover:scale-110 hover-border-animate">
-                <img src="https://via.placeholder.com/200" alt="Admin" class="rounded-full w-48 h-48">
+                <img src="./public/image/admin.png" alt="Admin" class="rounded-full w-52 h-52">
             </div>
-            <h2 class="mt-4 text-xl font-bold text-gray-500 group-hover:text-yellow-500 group-hover:underline">Admin Page</h2>
+            <h2 class="mt-4 text-3xl font-bold text-gray-800 group-hover:text-yellow-500 group-hover:underline">Admin Page</h2>
         </a>
 
         <!-- Store Page -->
         <a href="/customer/view/index.html" class="group text-center">
             <div
                 class="w-64 h-64 rounded-full bg-white shadow-lg flex items-center justify-center transition-transform transform group-hover:scale-110 hover-border-animate">
-                <img src="https://via.placeholder.com/200" alt="Store" class="rounded-full w-48 h-48">
+                <img src="./public/image/store.png" alt="Store" class="rounded-full w-52 h-52">
             </div>
-            <h2 class="mt-4 text-xl font-bold text-gray-500 group-hover:underline group-hover:text-yellow-500">Store Page</h2>
+            <h2 class="mt-4 text-3xl font-bold text-gray-800 group-hover:underline group-hover:text-yellow-500">Store Page</h2>
         </a>
     </div>
 </body>
