--- a/index.html
+++ b/index.html
@@ -1,76 +1,76 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin and Store Page</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @keyframes gradient-border {
-            0% {
-                border-color: #ff9a9e;
-            }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HOME PAGE</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    @keyframes gradient-border {
+      0% {
+        border-color: #A7B7D8;
+      }
 
-            25% {
-                border-color: #fad0c4;
-            }
+      25% {
+        border-color: #8FADC6;
+      }
 
-            50% {
-                border-color: #fbc2eb;
-            }
+      50% {
+        border-color: #6E97B2;
+      }
 
-            75% {
-                border-color: #a18cd1;
-            }
+      75% {
+        border-color: #5A80A7;
+      }
 
-            100% {
-                border-color: #ff9a9e;
-            }
-        }
+      100% {
+        border-color: #A7B7D8;
+      }
+    }
 
-        .hover-border-animate {
-            position: relative;
-            overflow: hidden;
-        }
+    .hover-border-animate {
+      position: relative;
+      overflow: hidden;
+    }
 
-        .hover-border-animate::before {
-            content: '';
-            position: absolute;
-            inset: 0;
-            border-radius: 9999px;
-            border: 4px solid transparent;
-            transition: border-color 0.3s ease;
-        }
+    .hover-border-animate::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      border-radius: 9999px;
+      border: 4px solid transparent;
+      transition: border-color 0.3s ease;
+      s
+    }
 
-        .hover-border-animate:hover::before {
-            animation: gradient-border 2s infinite;
-        }
-    </style>
+    .hover-border-animate:hover::before {
+      animation: gradient-border 2s infinite;
+    }
+
+    .group:hover h2 {
+      color: #0d71a0;
+      text-decoration: underline;
+    }
+  </style>
 </head>
 
-<body class="min-h-screen bg-cover bg-center flex items-center justify-center"
-    style="background-image: url('public/image/background.png');">
-    <div class="flex space-x-72">
-        <!-- Admin Page -->
-
-        <a href="admin/view/index.html" class="group text-center">
-            <div
-                class="w-64 h-64 rounded-full bg-white shadow-lg flex items-center justify-center transition-transform transform group-hover:scale-110 hover-border-animate">
-                <img src="public/image/admin.png" alt="Admin" class="rounded-full w-52 h-52" loading="lazy">
-            </div>
-            <h2 class="mt-4 text-3xl font-bold text-gray-800 group-hover:text-yellow-500 group-hover:underline">Admin Page</h2>
-        </a>
-
-        <!-- Store Page -->
-        <a href="customer/view/index.html" class="group text-center">
-            <div
-                class="w-64 h-64 rounded-full bg-white shadow-lg flex items-center justify-center transition-transform transform group-hover:scale-110 hover-border-animate">
-                <img src="public/image/store.png" alt="Store" class="rounded-full w-52 h-52" loading="lazy">
-            </div>
-            <h2 class="mt-4 text-3xl font-bold text-gray-800 group-hover:underline group-hover:text-yellow-500">Store Page</h2>
-        </a>
-    </div>
+<body class="min-h-screen bg-center bg-no-repeat flex items-center justify-center relative"
+  style="background: linear-gradient(180deg, #D1E1F0, #D4E2EF, #C1DCED); background-size: contain;">
+  <img src="/public/image/phone-store.png" alt="Phone Store"
+    class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"
+    style="max-width: 100%; max-height: 100%; z-index: -1;">
+  <div class="grid grid-cols-6 w-full h-full absolute top-1/3 left-0">
+    <a href="/admin/view/index.html" class="group text-center col-start-2">
+      <div
+        class="w-64 h-64 rounded-full bg-white shadow-lg flex items-center justify-center transition-transform transform group-hover:scale-110 hover-border-animate">
+        <img src="/public/image/admin.png" alt="Admin" class="rounded-full w-52 h-52">
+      </div>
+      <h2 class="mt-4 text-3xl font-bold text-gray-800">Admin Page</h2>
+    </a>
+    <a href="/customer/view/index.html" class="group text-center col-start-5" style="margin-left: 1.2cm;">
+      <div
+        class="w-64 h-64 rounded-full bg-white shadow-lg flex items-center justify-center transition-transform transform group-hover:scale-110 hover-border-animate">
+        <img src="/public/image/store.png" alt="Store" class="rounded-full w-52 h-52">
+      </div>
+      <h2 class="mt-4 text-3xl font-bold text-gray-800" style="margin-left: 1cm;">Store Page</h2>
+    </a>
+  </div>
 </body>
-
-</html>
